# ghc-unload-obj

./: README.md  ghc-load-obj.cabal  ghc-unload-obj.cabal  stack.yaml  strings.txt
app/: Main.hs
src/: Lib.hs
