cabal-version: 1.12

name:           ghc-load-obj
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/Kratohs/ghc-load-obj#readme>
homepage:       https://github.com/Kratohs/ghc-load-obj#readme
bug-reports:    https://github.com/Kratohs/ghc-load-obj/issues
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/Kratohs/ghc-load-obj

library
  exposed-modules:
      Lib
  hs-source-dirs:
      src
  ghc-options: -O2
  build-depends:
      base >= 4.7 && < 5
  default-language: Haskell2010

executable ghc-load-obj-exe
  main-is: Main.hs
  other-modules:
      Paths_ghc_load_obj
  hs-source-dirs:
      app
  ghc-options: -W -Werror -rtsopts "-with-rtsopts=--copying-gc" -O2
  build-depends:
      base >=4.7 && <5

    -- Either 'ghc' or 'ghc-lib' will work for loading base libraries
    , ghc
    -- , ghc-lib
    , ghc-paths
  default-language: Haskell2010
